--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if user_signed_in? %>
+    <h3>Hello, <%=current_user.email%>!</h3>
+    <p><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></p>
+  <% else %>
+    <p><%= link_to "サインイン", new_user_session_path %></p>
+    <p><%= link_to "ユーザー登録", new_user_registration_path %></p>
+  <% end %>
+  <hr>
 
 <%= yield %>
 
